@@ -4,6 +4,7 @@
 #
 # Copyright (C) 2007, 2008, 2009 Loic Dachary <loic@dachary.org>
 # Copyright (C)       2008, 2009 Bradley M. Kuhn <bkuhn@ebb.org>
+# Copyright (C)             2009 Johan Euphrosine <proppy@aminche.com>
 # Copyright (C) 2006             Mekensleep <licensing@mekensleep.com>
 #                                24 rue vieille du temple 75004 Paris
 #
@@ -1862,6 +1863,21 @@ class PokerServiceTestCase(PokerServiceTestCaseBase):
         clear_all_messages()
         self.service.buyInPlayer(self.user1_serial, table_serial, currency_serial, None)
         self.assertTrue("*ERROR*" in get_messages()[0])
+    # ----------------------------------------------------------------
+    def test25_chatMessageArchive(self):
+        self.service.startService()
+        player_serial = 10
+        game_id = 42
+        message = 'yeah'
+        self.service.chatMessageArchive(player_serial, game_id, message)
+        cursor = self.service.db.cursor(DictCursor)
+        cursor.execute("SELECT * FROM chat_messages")
+        result = cursor.fetchone()
+        self.assertEquals(player_serial, result['player_serial'])
+        self.assertEquals(game_id, result['game_id'])
+        self.assertEquals(message, result['message'])
+        self.assertNotEquals(0, result['timestamp'])
+        
 
 ##############################################################################
 class RefillTestCase(unittest.TestCase):
